Fix broken footer on mobile.

--- a/client/src/app/views/login/login.component.scss
+++ b/client/src/app/views/login/login.component.scss
@@ -1,3 +1,4 @@
 #loginContainer {
-    padding: 10vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
 }
